# timeseries-aggregation

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-service.yaml  docker-compose.yaml  example.xlsx  rust-toolchain.toml
migrations/2026-01-07-062750-0000_create_timeseries/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/api/: mod.rs
src/database/: mod.rs  model.rs
tests/: query_endpoint_test.rs
